feat(Dashboard): Added an online/offline indicator

--- a/src/apps/OpenHumanTask.Runtime.Dashboard/wwwroot/index.html
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/wwwroot/index.html
@@ -1,5 +1,84 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
+<!--
+
+
+                                                %&@@@&@@@&#
+                                    @&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@
+                                @&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@
+                        @@&@&@&@&@&@&@                             @&@&@&@&@&@&@@
+                    &&&&&&&&&&&,                                         (&&&&&&&&&&&
+                    @&@&@&@&@&                                                   &@&@&@&@&@
+                &&&&&&&&&                                                           &&&&&&&&&
+            &@&@&@&@                                                                 @&@&@&@&
+            &&&&&&&                                                                       &&&&&&&
+        &@&@&@&                                                                           &@&@&@&
+        &&&&&&&                                                                               &&&&&&&
+    .@&@&@&                                                                                   &@&@&@
+    @&&&&&&             &&&&&&&&&         &@&&&&&&&&&&&&&&&&&&&&%         &&&&&&&&@             &&&&&&@
+    &@&@&@             @&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@             @&@&@&
+    &&&&&&             &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&             &&&&&&
+&@&@&@              &@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&              @&@&@&
+&&&&&&                &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&                &&&&&@
+@&@&@                  &@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&                 ,@&@&@
+&&&&&&                .&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&                 &&&&&&
+&@&@&                 &@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&                 &@&@&
+%&&&&&                &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&                &&&&&/
+@&@&@&               &@&@&@&@&@&@&@ &&@&@&@&@&@&&              &@&@&@&@&@&& @&@&@&@&@&@&@&               &@&@&@
+&&&&&&              %&&&&&&&&&&&&&   &&&&&&          %&&&%          &&&&&@   &&&&&&&&&&&&&#              &&&&&&
+@&@&@&              @&@&@&@&@&@&@&@&@&@&         &@&@&@&@&@&@&         &@&@&@&@&@&@&@&@&@&@              &@&@&@
+#&&&&&             &&&&&&&&&&&&&&&&&&@               &&&&&               &&&&&&&&&&&&&&&&&&&             &&&&&*
+&@&@&             &@&@&@&@&@&@    %@&                @&@                &@#   .@&@&@&@&@&@&             &@&@&
+&&&&&&           &&&&&&&&&&&,&&&&&&&                &&&&&                &&&&&&&*&&&&&&&&&&&           &&&&&&
+@&@&@          @@&@&@&@&@&@&@&@&   &@&            @&@&@&@            &@&   &@&@&@&@&@&@&@&@@         ,@&@&@
+&&&&&&         &&&&&&&&&&&&&&& &&&&&&  @&&&&&&&&&&&&&&&&&&&&&&&&&&&&  &&&&&@ &&&&&&&&&&&&&&&         &&&&&@
+&@&@&@       @&@&@&@&@&@&@&.&@&@&@&#&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&(&@&@&@&/&@&@&@&@&@&@&@       @&@&@&
+    &&&&&&      &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&      &&&&&&
+    &@&@&@    &@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&    @&@&@&
+    @&&&&&&  &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&  &&&&&&@
+        @&@&@&&&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@
+        &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+        &@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&
+            &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+            &@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&
+                &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+                    @&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@
+                    &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&#
+                        @@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@@
+                                @&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@
+                                    &&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&@&&
+                                                /&@@&&&@@&*
+
+
+
+
+
+
+   _____                _____                      _____         _      _____         _   _
+  |     |___ ___ ___   |  |  |_ _ _____ ___ ___   |_   _|___ ___| |_   | __  |_ _ ___| |_|_|_____ ___
+  |  |  | . | -_|   |  |     | | |     | .'|   |    | | | .'|_ -| '_|  |    -| | |   |  _| |     | -_|
+  |_____|  _|___|_|_|  |__|__|___|_|_|_|__,|_|_|    |_| |__,|___|_,_|  |__|__|___|_|_|_| |_|_|_|_|___|
+        |_|
+
+
+
+
+
+    Copyright © 2022-Present The Open Human Task Specification Authors. All rights reserved.
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+    -->
 
 <head>
     <meta charset="utf-8" />
@@ -16,7 +95,11 @@
 
 <body class="d-flex flex-column h-100">
 
-    <div id="app">Loading...</div>
+    <div id="app" class="h-100">
+        <div id="logo-container" class="full-splash">
+            <img src="img/logo_white.svg" />
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -25,6 +108,7 @@
     </div>
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/online-status-listener.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
